# rss_is_terminal

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
browser_extension/: background.js  build.py  content.js  manifest.json
browser_extension/native_host/: install.sh  rss_is_terminal_host.py
src/rss_is_terminal/: __init__.py  app.py  app.tcss  config.py
src/rss_is_terminal/models/: database.py  schema.py
src/rss_is_terminal/services/: extractor.py  feed_service.py  fetcher.py  opml.py  scraper.py  scraper_config.py
src/rss_is_terminal/widgets/: article_list.py  article_view.py  feed_list.py  help_screen.py  status_bar.py
tests/: conftest.py  test_config.py  test_database.py  test_extractor.py  test_feed_service.py  test_fetcher.py  test_opml.py  test_scraper.py  test_scraper_config.py
