[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rss-is-terminal"
version = "0.1.0"
description = "A terminal-based RSS reader with a lazygit-style TUI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Jonny Irwin" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
]
dependencies = [
    "textual>=0.80.0",
    "feedparser>=6.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "html2text>=2024.2",
    "platformdirs>=4.0",
    "trafilatura>=2.0",
]

[project.scripts]
rss-terminal = "rss_is_terminal.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rss_is_terminal"]

[project.optional-dependencies]
js = ["playwright>=1.40"]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
